# voicevox_core

./: CHANGELOG.md  Cargo.toml
.github/workflows/: benchmarks.yml  build.yml  test.yml
build_util/: make_ios_xcframework.bash  make_xcframework.bash
crates/test_util/: Cargo.toml  build.rs
crates/test_util/src/: lib.rs
crates/voicevox_cli/: Cargo.toml
crates/voicevox_cli/src/: main.rs
crates/voicevox_core/: Cargo.toml
crates/voicevox_core/benches/: simulation.rs
crates/voicevox_core/examples/: talk.rs
crates/voicevox_core/src/: lib.rs  synthesizer.rs
crates/voicevox_core/src/core/: manifest.rs  metas.rs  status.rs  voice_model.rs
crates/voicevox_core/src/core/infer/domains/: experimental_talk.rs
crates/voicevox_core/src/engine/song/: validate.rs
crates/voicevox_core/src/engine/talk/user_dict/: word.rs
crates/voicevox_core_build_features/src/: download.rs
crates/voicevox_core_c_api/: Cargo.toml
crates/voicevox_core_c_api/tests/e2e/: assert_cdylib.rs  main.rs  snapshots.toml
crates/voicevox_core_java_api/lib/src/main/java/jp/hiroshiba/voicevoxcore/: StyleType.java
crates/voicevox_core_python_api/python/voicevox_core/_python/: __init__.py
crates/xtask/: Cargo.toml
model/sample.vvm/: manifest.json  metas.json
