[package]
name = "test_util"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
c-api = ["dep:bindgen"]

[dependencies]
libloading.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bindgen = { workspace = true, optional = true }
camino.workspace = true
flate2.workspace = true
fs-err.workspace = true
indoc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
reqwest.workspace = true
tar.workspace = true
voicevox_core_build_features = { workspace = true, features = ["download"] }
zip.workspace = true

[lints.rust]
unsafe_code = "allow" # C APIのbindgen
rust_2018_idioms = "warn"
